--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "express-graphql": "^0.9.0",
     "graphql": "^14.4.2",
     "reflect-metadata": "^0.1.13",
-    "routing-controllers": "^0.7.7",
-    "type-graphql": "^0.17.4"
+    "type-graphql": "^0.17.4",
+    "typedi": "^0.8.0",
+    "typeorm": "^0.2.18",
+    "typeorm-typedi-extensions": "^0.2.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.0",
