--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "./node_modules/typescript/bin/tsc",
-    "dev": "node ./build/server.js",
-    "start-dev": "npm run build && npm run dev",
+    "start-dev": "NODE_ENV=dev node build/server.js",
+    "start": "ts-node src/index.ts",
+    "dev": "npm install && npm run build && npm run migrate && npm run start-dev",
+    "migrate": "./node_modules/.bin/typeorm migration:run",
     "tslint": "./node_modules/tslint/bin/tslint --project '.'",
     "tslint-fix": "./node_modules/tslint/bin/tslint --project '.' --fix"
   },
@@ -17,6 +19,8 @@
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.4.2",
+    "mysql": "^2.17.1",
+    "nconf": "^0.10.0",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^0.17.4",
     "typedi": "^0.8.0",
@@ -26,6 +30,7 @@
   "devDependencies": {
     "@types/express": "^4.17.0",
     "@types/express-graphql": "^0.8.0",
+    "@types/nconf": "^0.10.0",
     "@types/node": "^12.6.9",
     "tslint": "^5.18.0",
     "typescript": "^3.5.3"
