--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/jsonwebtoken": "^8.3.3",
+    "class-validator": "^0.9.1",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.4.2",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.17.1",
     "nconf": "^0.10.0",
     "reflect-metadata": "^0.1.13",
