--- a/package.json
+++ b/package.json
@@ -28,13 +28,15 @@
     "type-graphql": "^0.17.4",
     "typedi": "^0.8.0",
     "typeorm": "^0.2.18",
-    "typeorm-typedi-extensions": "^0.2.3"
+    "typeorm-typedi-extensions": "^0.2.3",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.0",
     "@types/express-graphql": "^0.8.0",
     "@types/nconf": "^0.10.0",
     "@types/node": "^12.6.9",
+    "@types/winston": "^2.4.4",
     "tslint": "^5.18.0",
     "typescript": "^3.5.3"
   }
