--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/jsonwebtoken": "^8.3.3",
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.19.0",
     "class-validator": "^0.9.1",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.4.2",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "mysql": "^2.17.1",
     "nconf": "^0.10.0",
     "reflect-metadata": "^0.1.13",
+    "routing-controllers": "^0.7.7",
     "type-graphql": "^0.17.4",
     "typedi": "^0.8.0",
     "typeorm": "^0.2.18",
@@ -32,8 +35,12 @@
     "winston": "^3.2.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.0",
+    "@types/bcrypt-nodejs": "0.0.30",
+    "@types/body-parser": "^1.17.1",
+    "@types/express": "^4.17.1",
     "@types/express-graphql": "^0.8.0",
+    "@types/jsonwebtoken": "^8.3.3",
+    "@types/multer": "^1.3.9",
     "@types/nconf": "^0.10.0",
     "@types/node": "^12.6.9",
     "@types/winston": "^2.4.4",
